--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
+    "start:prod": "PORT=4000 npx pushstate-server build",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
