--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "classnames": "^2.2.5",
     "jquery": "^3.5.1",
     "ramda": "^0.22.1",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
